# arithmetic_ocr

./: .clangd
arithmetic/: CMakeLists.txt  main.cpp  package.xml
arithmetic/camera_driver/: CMakeLists.txt
arithmetic/include/arithmetic/: arithmetic_node.hpp  expression_utils.hpp  ocr_engine.hpp
arithmetic/src/: arithmetic_node.cpp  main.cpp  ocr_engine.cpp
